[gd_scene load_steps=3 format=3 uid="uid://b8eopy63duh7n"]

[ext_resource type="Script" path="res://src/Scripts/PauseMenu.gd" id="1_v72mw"]
[ext_resource type="PackedScene" uid="uid://cvdkquhr0v87a" path="res://src/Scenes/Menus/settings.tscn" id="2_k01hr"]

[node name="PauseMenu" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v72mw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.554109, 0.223338, 0.457535, 1)

[node name="PauseGridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -23.5
offset_right = 28.5
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PauseGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseGridContainer"]
layout_mode = 2
text = "Resume"

[node name="SettingsButton" type="Button" parent="PauseGridContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="PauseGridContainer"]
layout_mode = 2
text = "Quit game"

[node name="SettingsGridContainer" type="GridContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -88.5
offset_right = 170.0
offset_bottom = 88.5
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsPanelContainer" parent="SettingsGridContainer" instance=ExtResource("2_k01hr")]
visible = true
layout_mode = 2

[connection signal="pressed" from="PauseGridContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseGridContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PauseGridContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="return_from_menu" from="SettingsGridContainer/SettingsPanelContainer" to="." method="_on_settings_panel_container_return_from_menu"]
